<resources>
    <string name="app_name">Friends</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Grzegorz Charyszczak</string>
    <string name="email">Email</string>
    <string name="mail">Mail</string>
    <string name="email_placeholder">charyszczakg@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="phone_placeholder">+48 502 288 995</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="address_placeholder">Popowicka 146/27, Wroclaw</string>
    <string name="visit">Visit</string>
    <string name="location">Location</string>
    <string name="website_placeholder">www.schemabuoi.github.io/grzegorz-charyszczak</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_placeholder">01/01/2020</string>
    <string name="add_friend">Add Friend</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
