<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.fragment.EditableFriendDataFragment">

    <LinearLayout
        android:id="@+id/linNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_name_small"
            android:layout_gravity="center">
        </ImageView>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp"
            >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linPhoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linNameContainer"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/imgPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_small"
            android:layout_gravity="center">
        </ImageView>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linBirthdayContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linPhoneContainer"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/imgBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_birthday_small"
            android:layout_gravity="center">
        </ImageView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBirthday"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginLeft="12dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="1dp"
            android:text="@string/birthday_placeholder"
            android:textColor="@color/colorPrimaryDark">

        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linEmailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linBirthdayContainer"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/imgEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_small"
            android:layout_gravity="center">
        </ImageView>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linWebsiteContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linEmailContainer"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/imgWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_website_small"
            android:layout_gravity="center">
        </ImageView>

        <EditText
            android:id="@+id/etWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/website"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp">

        </EditText>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgFavorite"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_favorite_false"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linWebsiteContainer">

    </ImageView>

</RelativeLayout>