<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollAddFriendContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AddFriendActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:id="@+id/relFriendDataContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/linNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_name_small"
                    android:layout_gravity="center">
                </ImageView>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/name"
                    android:layout_marginLeft="8dp"
                    >

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linPhoneContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linNameContainer"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_phone_small"
                    android:layout_gravity="center">
                </ImageView>

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:layout_marginLeft="8dp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linBirthdayContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linPhoneContainer"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imgBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_birthday_small"
                    android:layout_gravity="center">
                </ImageView>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBirthday"
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="12dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:strokeColor="@color/colorPrimaryDark"
                    app:strokeWidth="1dp"
                    android:text="@string/birthday_placeholder"
                    android:textColor="@color/colorPrimaryDark">

                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linEmailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linBirthdayContainer"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imgEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_email_small"
                    android:layout_gravity="center">
                </ImageView>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:layout_marginLeft="8dp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linWebsiteContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linEmailContainer"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imgWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_website_small"
                    android:layout_gravity="center">
                </ImageView>

                <EditText
                    android:id="@+id/etWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/website"
                    android:layout_marginLeft="8dp">

                </EditText>

            </LinearLayout>

            <!--    <LinearLayout-->
            <!--        android:id="@+id/linPhotoFavouriteContainer"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:orientation="horizontal"-->
            <!--        android:layout_marginTop="32dp">-->

            <!--        <de.hdodenhof.circleimageview.CircleImageView-->
            <!--            android:id="@+id/imgProfilePicture"-->
            <!--            android:layout_width="70dp"-->
            <!--            android:layout_height="70dp"-->
            <!--            android:layout_weight="1"-->
            <!--            app:civ_border_color="@color/colorPrimaryDark"-->
            <!--            app:civ_border_width="1dp"-->
            <!--            android:src="@drawable/user_icon"-->
            <!--            android:layout_gravity="center">-->

            <!--        </de.hdodenhof.circleimageview.CircleImageView>-->



            <!--    </LinearLayout>-->

            <ImageView
                android:id="@+id/imgFavorite"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_favorite_false"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/linWebsiteContainer">

            </ImageView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="150dp"
                android:layout_height="60dp"
                app:cornerRadius="10dp"
                android:text="@string/save"
                android:layout_below="@id/imgFavorite"
                android:layout_marginTop="32dp"
                android:layout_centerHorizontal="true"
                >
            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>